--- a/index.html
+++ b/index.html
@@ -9,3 +9,13 @@
     
 </body>
 </html>
+
+
+
+<!-- echo "# web-dev-protfolio" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/nayon01/web-dev-protfolio.git
+git push -u origin main -->
